# Edge-Detection-Viewer

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/com/YashUppal/edgedetectionviewer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: edge-detection.cpp
app/src/main/java/com/YashUppal/edgedetectionviewer/: GLRenderer.java  MainActivity.java  MainActivity.kt
app/src/main/java/com/YashUppal/edgedetectionviewer/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/YashUppal/edgedetectionviewer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
web/: package-lock.json  package.json  tsconfig.json  webpack.config.js
web/src/: index.html  index.ts  styles.css
